--- a/app.json
+++ b/app.json
@@ -13,8 +13,8 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "black"
+        "foregroundImage": "./assets/images/netIcon.png",
+        "backgroundColor": "#000000"
       }
     },
     "web": {
@@ -30,7 +30,7 @@
           "image": "./assets/images/netIcon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "black"
+          "backgroundColor": "#000000"
         }
       ]
     ],
