--- a/package.json
+++ b/package.json
@@ -23,18 +23,23 @@
     "axios": "^1.7.9",
     "expo": "~52.0.26",
     "expo-av": "~15.0.2",
+    "expo-background-fetch": "~13.0.5",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.11",
+    "expo-device": "^7.0.2",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
+    "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
+    "expo-task-manager": "~12.0.5",
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
